Adding correction and copy of final thesis. Final commit ever!!!

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -189,11 +189,10 @@ The weak force has two associated types of interaction: \gls{cc} interactions wh
 \begin{equation}\label{eqn:weak current}
 \begin{split}
     j^{CC}_{weak} &= \frac{g}{\sqrt{2}}\overline{\psi}\gamma^{\mu}P_L\psi, \\
-    j^{NC}_{weak} &= \frac{g}{2\cos{\theta_W}}\sum_{i = \nu, l}
-    \overline{\psi}_i \gamma^\mu (g_V^i - g_A^i \gamma^5)\psi_i, 
+    j^{NC}_{weak} &= \frac{g}{2\cos{\theta_W}} \overline{\psi}_i \gamma^\mu (g_V^i - g_A^i \gamma^5)\psi_i, 
 \end{split}
 \end{equation}
-where $g$ is the weak coupling factor, $\theta_W$ is the Weinberg angle, $g_V$ is the vector coupling and $g_A$ is the axial coupling. The sum that arises in the expression for $j^{NC}_{weak}$ is due to the incoming  particles at the vertex remaining unchanged leading to two possibilities, one for neutrinos and one for the charged leptons. Both a neutrino and a charged lepton are present at a vertex in $j^{CC}_{weak}$ interactions, therefore, there is no sum since $j^{CC}_{weak}$ represents the coupling between the two. \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}\cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}\cite{PDG_2022}. The weak coupling is related to the Fermi Constant, $G_F$, and the boson masses such that,
+where $g$ is the weak coupling factor, $\theta_W$ is the Weinberg angle, $g_V$ is the vector coupling and $g_A$ is the axial coupling \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}\cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}\cite{PDG_2022}. The weak coupling is related to the Fermi Constant, $G_F$, and the boson masses such that,
 \begin{equation}
 \begin{split}
     \frac{g^2}{8m^2_W} &= \frac{G_F}{\sqrt{2}}, \\
