--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -100,7 +100,7 @@ In their development of the box model, Thomas and Imel assumed the diffusion and
 \end{equation}
 where $\xi = \alpha Q_0/E$. $\alpha$ is a free parameter and $Q$ and $Q_0$ are defined as in \EquationRef{Jaffe}\cite{LArTPC_book}\cite{Recombination_box_model}.
 
-In addition to being model-dependent, the recombination value, \textit{R}, is often presented as a function of dE/dx, with the value being given by by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$, where $W_{ion} = 23.6$ eV/\electron, which is the energy required to ionise an argon atom. For an electric field of 0.5 kV/cm, the recombination value has a maximum of $\sim0.7$ at a dE/dx value of $\sim1$ MeV/cm and falls to a minimum of $\sim0.1$ as the dE/dx value increases to $\sim30$ MeV/cm \cite{LArTPC_book}.
+In addition to being model-dependent, the recombination value, \textit{R}, is often presented as a function of dE/dx, with the value being given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$, where $W_{ion} = 23.6$ eV/\electron, which is the energy required to ionise an argon atom. For an electric field of 0.5 kV/cm, the recombination value has a maximum of $\sim0.7$ at a dE/dx value of $\sim1$ MeV/cm and falls to a minimum of $\sim0.1$ as the dE/dx value increases to $\sim30$ MeV/cm \cite{LArTPC_book}.
 
 \paragraph{Space Charge}
 The electric field in a \gls{tpc} is usually designed to be uniform between the cathode and the anode, however, particularly for surface-level detectors this often does not end up being the case. Cosmic muons may enter the detector ionising the argon atoms. The ionised electrons and argon ions then drift towards the anode and cathode respectively, however, the drift time for the ions is much greater than the electron drift time. If the flux of cosmic muons entering the detector is sufficiently large, this results in a significant positive charge build-up towards the cathode. This effect is known as \textit{space charge} and directly impacts the recombination effect since it is linked to the magnitude of the local electric field as well as affecting the drifting electrons \cite{microboone_sce}.
@@ -142,7 +142,7 @@ where $E_A$ is the electric field at the anode and both $E'$ and $x'$ are dummy 
 \end{equation}
 where $E_0 = V/D$ is the nominal electric field, \textit{V} is the difference in the voltage between the anode and cathode and $\alpha = \frac{D}{E_0}\sqrt{\frac{K}{\epsilon \mu}}$ which is a dimensionless parameter \cite{space_charge_math}.
 
-Due to the effects of space charge, the electric field in \gls{microboone} changes from its nominal value by up to a maximum of 15\% \cite{MicroBooNE_space_charge_number}. The change maximum change in the electric field that \gls{sbnd} and \gls{icarus} experience is at the 4\% level \cite{ICARUS_space_charge_number}. 
+Due to the effects of space charge, the electric field in \gls{microboone} changes from its nominal value by up to a maximum of 15\% \cite{MicroBooNE_space_charge_number}. The maximum change in the electric field that \gls{sbnd} and \gls{icarus} experience is at the 4\% level \cite{ICARUS_space_charge_number}. 
 
 \subsubsection{Scintillation and Cherenkov Light}
 
@@ -154,7 +154,7 @@ or by recombination via,
 \begin{equation}
     {\text{Ar}^+} + \text{Ar} \longrightarrow {\text{Ar}_2^+} + \electron \longrightarrow {\text{Ar}_2^*} \longrightarrow {2\text{Ar}} + \gamma.
 \end{equation}
-The excimer may be in one of two states each with a different decay time which gives rise to the fast and slow scintillation mechanisms. Around 23\% of all scintillation light is produced via the fast mechanism with the remainder produced via the slow mechanism \cite{scintillation_light_mechanism}. The time period to detect the fast component is \mbox{$\sim6$ ns}, whereas for the slow component it is \mbox{$\sim1.6$ $\mu$s} \cite{SBN_Proposal}.  Since the scintillation light is detected almost instantaneously when compared to the time taken for the electrons to drift to the wire planes, the horizontal drift distance may be determined. Combining this with the 2D information from the wire planes allows for 3D event reconstruction.
+The excimer may be in one of two states each with a different decay time which gives rise to the fast and slow scintillation mechanisms. Around 23\% of all scintillation light is produced via the fast mechanism with the remainder produced via the slow mechanism \cite{scintillation_light_mechanism}. The decay time period for the fast component is \mbox{$\sim6$ ns}, whereas for the slow component it is \mbox{$\sim1.6$ $\mu$s} \cite{SBN_Proposal}.  Since the scintillation light is detected almost instantaneously when compared to the time taken for the electrons to drift to the wire planes (which is $\sim 1$ ms), the horizontal drift distance may be determined. Combining this with the 2D information from the wire planes allows for 3D event reconstruction.
 
 Cherenkov light may also be emitted in liquid argon by charged particles crossing the \gls{tpc} (the refractive index of liquid argon is $\sim 1.22$). For highly relativistic particles, this results in a Cherenkov angle of $\sim34^{\circ}$. The number of photons produced by Cherenkov light is significantly less than scintillation light, however, Cherenkov light has the advantage of having an associated direction \cite{Cherenkov_light_liquid_argon}. 
 
@@ -313,7 +313,7 @@ The \gls{crt} for the vertical sides are again outside the \gls{tpc} and behind 
 
 The \gls{sbn} program was designed with the aim of resolving the contentious results observed by a number of experiments as was discussed in \SectionRef{subsec:Neutrino Oscillations}. Since it was purposely planned with this in mind, the \gls{sbn} program has a number of advantages over previous experiments in the hopes of detecting eV scale sterile neutrinos: it has a multi-detector design, the near and far detectors are positioned such that the oscillation signal is close to maximal for an expected set of oscillation parameters, the detectors use the same technology and have the same target medium \cite{SBN_paper}. 
 
-The mixing angle, $\sin^2{2\theta}$, gives the maximum oscillation probability amplitude. For the case that $\frac{\Delta m^2_{41}L}{4E} = \frac{\pi}{2}$, the neutrino mixing probability is maximal and is given by the mixing angle. 
+The mixing angle, $\sin^2{2\theta}$, gives the maximum oscillation probability amplitude. For the case that $\frac{\Delta m^2 L}{4E} = \frac{\pi}{2}$, the neutrino mixing probability is maximal and is given by the mixing angle. Assuming $\frac{L}{E}$ and the mixing angle are fixed, $\Delta m^2$ controls the frequency of oscillations. The higher the value of $\Delta m^2$, the greater the oscillation frequency. If $\Delta m^2$ is sufficiently large, the oscillation frequency is so rapid that the oscillation probability will average out to a single value. 
 
 The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases, there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again, there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
 
