--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -192,7 +192,7 @@ The major contribution that the $K^0$ makes to the BNB flux is from the decay of
 
 For the $K^-$, there is minimal production data available, therefore, simulations are used exclusively. The rate and spectrum of the $K^-$ are estimated by simulating 8.89 GeV/c proton-beryllium interactions \cite{BNB_flux}.
 
-The uncertainty associated with $\overset{(-)}{\nu}_{\!\!\mu}$ and $\overset{(-)}{\nu}_{\!\!e}$ production for each of the pion and kaon mechanisms described above is summarised in \TableRef{table:corr_flux}. The uncertainties for associated with the production mechanism are calculated by considering a $1\sigma$ variation of the underlying parameters \cite{BNB_flux_TN}. 
+The uncertainties associated with $\overset{(-)}{\nu}_{\!\!\mu}$ and $\overset{(-)}{\nu}_{\!\!e}$ production for each of the pion and kaon mechanisms described above are summarised in \TableRef{table:corr_flux}. They have been calculated by considering a $1\sigma$ variation of the underlying parameters \cite{BNB_flux_TN}. 
 
 \renewcommand{\arraystretch}{1.4}    
 \begin{table}[!h]
