--- a/chap6-valor_analysis_2.tex
+++ b/chap6-valor_analysis_2.tex
@@ -344,7 +344,7 @@ As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRe
 \clearpage
 \subsection{SBN Contour Construction}\label{sec:sensitivites_construction}
 
-The relevant phase space for each of the three analysis channels considered is split into a $40 \times 40$ grid. This number was chosen in order to find a balance between having sufficient granularity when constructing contours without having excessive computing times. The dimensions of the phase space considered are different for each analysis channel and are listed in \TableRef{table:analysis_channel_phase_space}. For each of the $40 \times 40$ points, a fit is performed of  \EquationRef{eqn:log_likelihood_ratio} where $\vec{\theta}$ is fixed to the corresponding oscillation parameters and $\vec{f}$ is bounded to to $\pm5\sigma$ from the nominal value, but allowed to float. If no systematics are included (i.e. a statistical only fit is performed), the $\chi^2$ value is simply calculated for the given oscillation parameters. Once the fits have been produced, a contour of constant $\chi^2$ is constructed. The $\chi^2$ value is chosen such that it corresponds to a certain confidence level, \textit{CL}, which for \gls{sbn} analyses is typically 5$\sigma$. The critical value of $\chi^2$, $\chi^2_{critical}$, corresponding to a 5$\sigma$ confidence level along with a number of other $\chi^2_{critical}$ values with their associated confidence levels which are commonly seen in literature are outlined in \TableRef{table:critical_chi2_values}. For a 2-sided test, the confidence levels and $\chi^2_{critical}$ are related via 
+The relevant phase space for each of the three analysis channels considered is split into a $40 \times 40$ grid. This number was chosen in order to find a balance between having sufficient granularity when constructing contours without having excessive computing times. The dimensions of the phase space considered are different for each analysis channel and are listed in \TableRef{table:analysis_channel_phase_space}. For each of the $40 \times 40$ points, a fit is performed of  \EquationRef{eqn:log_likelihood_ratio} where $\vec{\theta}$ is fixed to the corresponding oscillation parameters and $\vec{f}$ is bounded to $\pm5\sigma$ from the nominal value, but allowed to float. If no systematics are included (i.e. a statistical only fit is performed), the $\chi^2$ value is simply calculated for the given oscillation parameters. Once the fits have been produced, a contour of constant $\chi^2$ is constructed. The $\chi^2$ value is chosen such that it corresponds to a certain confidence level, \textit{CL}, which for \gls{sbn} analyses is typically 5$\sigma$. The critical value of $\chi^2$, $\chi^2_{critical}$, corresponding to a 5$\sigma$ confidence level along with a number of other $\chi^2_{critical}$ values with their associated confidence levels which are commonly seen in literature are outlined in \TableRef{table:critical_chi2_values}. For a 2-sided test, the confidence levels and $\chi^2_{critical}$ are related via 
 \begin{equation}
 	CL_{\text{2-sided}} = \int_0^{\chi^2_{critical}} \frac{e^{-x/2}x^{u/2-1}}{2^{u/2}\Gamma(u/2)} dx,
 	\label{eqn:confidence_level}
@@ -766,7 +766,7 @@ where $\zeta \in \{\sin^2{2\theta}, \Delta m^2_{41}\}$ and the subscript \textit
 \end{figure}
 \clearpage
 
-The impact of the $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_N^{C Ex}}$ and $f_{\sigma^{\pi}_{INEL}}$ parameters on the \nue appearance exclusion sensitivities are shown in \FigureRef{fig:nue_app_single_param}. The parameters were applied one at a time and chosen as some that showed the largest variations in \FigureRef{fig:nue_app_osc_param_pulls}, ensuring at least one parameter is from each systematic subgroup. Similarly, the $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_{\pi}^{C Ex}}$ and $f_{expskin}$ parameters were used for the \nue disappearance channel and the results are shown in \FigureRef{fig::nue_disapp_single_param}. Both the statistical-only contour and the one including all the flux and interaction systematics are shown for comparison. It should be noted that single parameters may contribute significantly to the total reduction in sensitivity from the inclusion of all systematic parameters. Additionally, the systematics considered were chosen based on a study which used an injected signal meaning the large impact seen there may not be directly mapped to an exclusion contour which gives a possible reason for the relatively minor impact seen due to $f_{\sigma^{\pi}_{INEL}}$ and $f_{R_{\pi}^{C Ex}}$.
+The impact of the $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_N^{C Ex}}$ and $f_{\sigma^{\pi}_{INEL}}$ parameters on the \nue appearance exclusion sensitivities are shown in \FigureRef{fig:nue_app_single_param}. The parameters were applied one at a time and chosen as some that showed the largest variations in \FigureRef{fig:nue_app_osc_param_pulls}, ensuring at least one parameter is from each systematic subgroup. Similarly, the $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_{\pi}^{C Ex}}$ and $f_{expskin}$ parameters were used for the \nue disappearance channel and the results are shown in \FigureRef{fig::nue_disapp_single_param}. A likely explanation as to why these parameters show some of the largest impacts is due to their relation to pion production. Pions provide one of the larger backgrounds resulting in these systematics contributing significantly. Both the statistical-only contour and the one including all the flux and interaction systematics are shown for comparison. It should be noted that single parameters may contribute significantly to the total reduction in sensitivity from the inclusion of all systematic parameters. Additionally, the systematics considered were chosen based on a study which used an injected signal meaning the large impact seen there may not be directly mapped to an exclusion contour which gives a possible reason for the relatively minor impact seen due to $f_{\sigma^{\pi}_{INEL}}$ and $f_{R_{\pi}^{C Ex}}$ for some of the parameter space. This is further highlighted by the fact that systematics have a varying impact depending on the location in parameter space. As an example, the $f_{R_{\pi}^{C Ex}}$ parameter in the \nue disappearance case shows a minor impact for all $\Delta m^2_{41}$ values on the left of \FigureRef{fig::nue_disapp_single_param}, but at low values of $\Delta m^2_{41}$ it shows some of the largest impact when compared with the other parameters (the right plot of \FigureRef{fig::nue_disapp_single_param}). 
 
 \begin{figure}[h!]
     \centering
@@ -798,7 +798,7 @@ To further assess the reduction in sensitivities due to specific parameters or p
 \end{figure}
 
 \newpage
-In addition to the exclusion regions, the allowed region with the inclusion of a single parameter are shown along with the corresponding contour from the entire associated set of systematic parameters for the \nue appearance and \nue disappearance channels in \FigureRef{fig:nue_app_single_syst_sets} and \FigureRef{fig:nue_disapp_single_syst_sets} respectively. Unlike for the exclusion contours, the  $f_{\sigma^{\pi}_{INEL}}$ and $f_{R_{\pi}^{C Ex}}$ parameters do not show the smallest change across the entire parameter space. The change is comparable to the other parameters for at least some of the parameter space which is more consistent with the size of the impact seen in the initial study.
+In addition to the exclusion regions, the allowed region with the inclusion of a single parameter are shown along with the corresponding contour from the entire associated set of systematic parameters for the \nue appearance and \nue disappearance channels in \FigureRef{fig:nue_app_single_syst_sets} and \FigureRef{fig:nue_disapp_single_syst_sets} respectively. Unlike for the exclusion contours, the  $f_{\sigma^{\pi}_{INEL}}$ and $f_{R_{\pi}^{C Ex}}$ parameters do not show the smallest change across the entire parameter space. The change is comparable to the other parameters for at least some of the parameter space which is more consistent with the size of the impact seen in the initial study. Different parameters having varying affects on different regions of parameter space highlights the need to include all the relevant systematic parameters. 
 
 
 \begin{figure}[h!]
@@ -1030,7 +1030,7 @@ The simplistic approach of applying a flat 20\% bias was motivated by the conser
 
 The full \nue event selection as described in \SectionRef{sec:nue_selection} was repeated but with the above changes applied. The events from these selections were then used to produce exclusion contours using the same systematic uncertainties as previously described. The overall event rate from the selections using the reconstructed information motivated by \ChapterRef{chap:Energy_Reco} is lower than the traditional method which relied on energy smearing. 
 
-The exclusion contours comparing the three selections are shown on the left of \FigureRef{fig:nue_app_bias} and \FigureRef{fig:nue_disapp_bias} for \nue appearance and disappearance respectively. The difference between the three exclusion contours is relatively minor and therefore the ratios of the contours to the contour from the original selection are shown on the right of their respective figures. Since the event rate is reduced in the updated selections, it is expected that the overall exclusion sensitivity would also be reduced. This is indeed the case for most values of $\Delta m^2_{41}$ with only a couple of areas where the selection with the flat 20\% bias improves the sensitivity. 
+The exclusion contours comparing the three selections are shown on the left of \FigureRef{fig:nue_app_bias} and \FigureRef{fig:nue_disapp_bias} for \nue appearance and disappearance respectively. The difference between the three exclusion contours is relatively minor and therefore the ratios of the contours to the contour from the original selection are shown on the right of their respective figures. Since the event rate is reduced in the updated selections, it is expected that the overall exclusion sensitivity would also be reduced. This is indeed the case for most values of $\Delta m^2_{41}$ with only a couple of areas where the selection with the flat 20\% bias improves the sensitivity. The exact reason for the improvement in sensitivity for some $\Delta m^2_{41}$ values is not fully understood, but a possible explanation is that by introducing the bias, a disproportionate number of events migrated to set of bins and improved the sensitivity in that region. 
 
 \begin{figure}[h!]
     \centering
