--- a/glossary.tex
+++ b/glossary.tex
@@ -56,6 +56,7 @@
 \newacronym{pmt}{PMT}{Photo Multiplier Tube}
 \newacronym{pot}{POT}{Protons-On-Target}
 \newacronym{reno}{RENO}{Reactor Experiment for Neutrino Oscillation}
+\newacronym{rms}{RMS}{Root Mean Square}
 \newacronym{sage}{SAGE}{Soviet-American Gallium Experiment}
 \newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
